--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stackflow/react": "^1.0.0",
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
+    "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
