--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
     "axios": "^1.3.2",
+    "firebase": "^9.9.0",
+    "firebase-tools": "11.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
