--- a/.github/workflows/jmt-live.yml
+++ b/.github/workflows/jmt-live.yml
@@ -12,14 +12,14 @@ on:
       - master
       - develop
     paths:
-      - "apps/admin/**"
+      - "src/**"
       - ".github/workflows/jmt-live.yml"
 jobs:
   Deploy_Live_channel:
 #    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     env:
-      working-directory: ./apps/admin
+      working-directory: ./
     environment:
       name: JMT Preview
       url: ${{ steps.run_firebase_deploy.outputs.details_url }}
@@ -44,7 +44,7 @@ jobs:
         id: run_firebase_deploy
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_GDSC_DJU }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_JMT_WEB }}'
           channelId: live
           projectId: jmt-web
           target: jmt-web
