--- a/.github/workflows/jmt-live.yml
+++ b/.github/workflows/jmt-live.yml
@@ -61,10 +61,28 @@ jobs:
           fields: workflow,job,commit,repo,ref,author,took
           custom_payload: |
             {
+              text: "JMT Live Deploy",
               attachments: [{
+                "author_name": "8398a7@action-slack", // json
+                title: 'CI Result',
                 color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
-                text: `${process.env.AS_WORKFLOW}\n${process.env.AS_JOB} (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}@${process.env.AS_REF} by ${process.env.AS_AUTHOR} ${{ job.status }} in ${process.env.AS_TOOK}\n URL: ${{ steps.run_firebase_deploy.outputs.details_url }}`,
-              }]
+                fields: [{
+                  title: 'Workflow',
+                  value: ${process.env.AS_WORKFLOW},
+                  short: true
+                },{
+                  title: 'Commit',
+                  value: ${process.env.AS_COMMIT},
+                  short: true
+                },{
+                  title: 'Status',
+                  value: ${{ job.status }},
+                  short: true
+                },{
+                  title: 'URL',
+                  value: ${{ steps.run_firebase_deploy.outputs.details_url }},
+                  short: true
+                }]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
