--- a/.github/workflows/jmt-live.yml
+++ b/.github/workflows/jmt-live.yml
@@ -63,22 +63,25 @@ jobs:
             {
               text: "JMT Live Deploy",
               attachments: [{
-                "author_name": "8398a7@action-slack", // json
+                "author_name": ${process.env.AS_AUTHOR},
                 title: 'CI Result',
                 color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
                 fields: [{
                   title: 'Workflow',
                   value: ${process.env.AS_WORKFLOW},
                   short: true
-                },{
+                },
+                {
                   title: 'Commit',
                   value: ${process.env.AS_COMMIT},
                   short: true
-                },{
+                },
+                {
                   title: 'Status',
                   value: ${{ job.status }},
                   short: true
-                },{
+                },
+                {
                   title: 'URL',
                   value: ${{ steps.run_firebase_deploy.outputs.details_url }},
                   short: true
