--- a/.github/workflows/jmt-live.yml
+++ b/.github/workflows/jmt-live.yml
@@ -2,11 +2,11 @@ name: Deploy to JMT Live Channel
 
 on:
   push:
-#    paths:
-#      - "src/**"
-#      - ".github/workflows/jmt-live.yml"
-#    branches-ignore:
-#      - master
+    paths:
+      - "src/**"
+      - ".github/workflows/jmt-live.yml"
+    branches-ignore:
+      - master
   pull_request:
     branches-ignore:
       - master
@@ -16,7 +16,7 @@ on:
       - ".github/workflows/jmt-live.yml"
 jobs:
   Deploy_Live_channel:
-#    if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     env:
       working-directory: ./
