--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "^9.9.0",
     "firebase-tools": "11.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vconsole": "^3.15.0"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
