--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "axios": "^1.3.2",
     "firebase": "^9.9.0",
     "firebase-tools": "11.13.0",
+    "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vconsole": "^3.15.0"
+    "vconsole": "^3.15.0",
+    "vite-plugin-mkcert": "^1.13.3"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
