--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@stackflow/core": "^1.0.0",
+    "@stackflow/plugin-basic-ui": "^1.2.2",
+    "@stackflow/plugin-history-sync": "^1.3.2",
+    "@stackflow/plugin-renderer-basic": "^1.1.1",
     "@stackflow/react": "^1.0.0",
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
@@ -19,6 +22,7 @@
     "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "vconsole": "^3.15.0",
     "vite-plugin-mkcert": "^1.13.3"
   },
