--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@stackflow/core": "^1.0.0",
     "@stackflow/plugin-basic-ui": "^1.2.2",
     "@stackflow/plugin-history-sync": "^1.3.2",
@@ -17,8 +19,10 @@
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
     "axios": "^1.3.2",
+    "classnames": "^2.3.2",
     "firebase": "^9.9.0",
     "firebase-tools": "11.13.0",
+    "framer-motion": "^10.9.1",
     "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +31,7 @@
     "vite-plugin-mkcert": "^1.13.3"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.6",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
