--- a/.github/workflows/jmt-live.yml
+++ b/.github/workflows/jmt-live.yml
@@ -2,11 +2,19 @@ name: Deploy to JMT Live Channel
 
 on:
   push:
+    branches:
+      - master
     paths:
       - "src/**"
       - ".github/workflows/jmt-live.yml"
+  pull_request:
     branches:
       - master
+    types:
+      - closed
+    paths:
+      - "src/**"
+      - ".github/workflows/jmt-live.yml"
 jobs:
   Deploy_Live_channel:
     if: github.event.pull_request.merged == true
