--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "jmt-web",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "standard-version"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -27,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "standard-version": "^9.5.0",
     "vconsole": "^3.15.0",
     "vite-plugin-mkcert": "^1.13.3"
   },
