--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-spring-bottom-sheet": "3.5.0-alpha.0",
     "standard-version": "^9.5.0",
     "vconsole": "^3.15.0",
     "vite-plugin-mkcert": "^1.13.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.6",
+    "@types/navermaps": "^3.6.4",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
