--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "jmt-web",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "standard-version",
+    "release:patch": "standard-version --release-as patch && git push --follow-tags origin main",
+    "release:minor": "standard-version --release-as minor && git push --follow-tags origin main"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -27,11 +30,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-spring-bottom-sheet": "3.5.0-alpha.0",
+    "standard-version": "^9.5.0",
     "vconsole": "^3.15.0",
     "vite-plugin-mkcert": "^1.13.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.6",
+    "@types/navermaps": "^3.6.4",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
