--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.6",
     "@types/navermaps": "^3.6.4",
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
@@ -56,7 +56,8 @@
     "prettier": "^2.8.4",
     "sass": "^1.58.0",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "packageManager": "yarn@3.4.1"
 }
