--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
     "axios": "^1.3.2",
+    "bootstrap": "^5.3.0-alpha3",
     "classnames": "^2.3.2",
     "firebase": "^9.9.0",
     "firebase-tools": "11.13.0",
@@ -37,7 +38,7 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.6",
     "@types/node": "^18.13.0",
-    "@types/react": "^18.0.27",
+    "@types/react": "^18.2.5",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
