--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@popperjs/core": "^2.11.7",
     "@stackflow/core": "^1.0.0",
     "@stackflow/plugin-basic-ui": "^1.2.2",
     "@stackflow/plugin-history-sync": "^1.3.2",
@@ -29,6 +30,7 @@
     "framer-motion": "^10.9.1",
     "localtunnel": "^2.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "standard-version": "^9.5.0",
