--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^9.9.0",
     "firebase-tools": "11.13.0",
     "framer-motion": "^10.9.1",
+    "jotai": "^2.1.0",
     "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
