--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-naver-maps": "^0.1.2",
     "react-router-dom": "^6.9.0",
     "react-spring-bottom-sheet": "3.5.0-alpha.0",
     "standard-version": "^9.5.0",
