--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@emotion/styled": "^11.10.6",
     "@stackflow/core": "^1.0.0",
     "@stackflow/plugin-basic-ui": "^1.2.2",
-    "@stackflow/plugin-history-sync": "^1.3.2",
+    "@stackflow/plugin-history-sync": "^1.3.8",
     "@stackflow/plugin-renderer-basic": "^1.1.1",
     "@stackflow/react": "^1.0.0",
     "@tanstack/react-query": "^4.24.4",
@@ -30,6 +30,7 @@
     "localtunnel": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-naver-maps": "^0.1.2",
     "react-router-dom": "^6.9.0",
     "react-spring-bottom-sheet": "3.5.0-alpha.0",
     "standard-version": "^9.5.0",
