--- a/.github/workflows/jmt-live.yml
+++ b/.github/workflows/jmt-live.yml
@@ -44,7 +44,7 @@ jobs:
         run: yarn install
       - name: Project Build
         run: yarn build
-      - uses: HyeokE/action-hosting-deploy@main
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         id: run_firebase_deploy
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
