--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^10.9.1",
     "jotai": "^2.1.0",
     "localtunnel": "^2.0.2",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-naver-maps": "^0.1.2",
@@ -41,6 +42,7 @@
     "@emotion/babel-plugin": "^11.10.6",
     "@types/navermaps": "^3.6.4",
     "@types/node": "^18.15.11",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
