Feature/jmt 116 other profile (#42)
Co-authored-by: HyeokE <jhjeong00@gmail.com>
Co-authored-by: Byeong Ju Choi <71929440+bjc1102@users.noreply.github.com>
Co-authored-by: Hyeok_E <61281239+HyeokE@users.noreply.github.com>

--- a/.github/workflows/jmt-dev.yml
+++ b/.github/workflows/jmt-dev.yml
@@ -3,8 +3,8 @@ name: Deploy to JMT Preview Channel
 on:
   push:
     paths:
-      - "src/**"
-      - ".github/workflows/jmt-dev.yml"
+      - 'src/**'
+      - '.github/workflows/jmt-dev.yml'
     branches-ignore:
       - master
   pull_request:
@@ -12,8 +12,8 @@ on:
       - master
       - develop
     paths:
-      - "src/**"
-      - ".github/workflows/jmt-dev.yml"
+      - 'src/**'
+      - '.github/workflows/jmt-dev.yml'
       -
 
 jobs:
