--- a/.github/workflows/jmt-live.yml
+++ b/.github/workflows/jmt-live.yml
@@ -29,6 +29,8 @@ jobs:
           echo "VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }}" >> .env
           echo "VITE_FIREBASE_APPID=${{ secrets.VITE_FIREBASE_APPID }}" >> .env
           echo "VITE_FIREBASE_MEASUREMENT_ID=${{ secrets.VITE_FIREBASE_MEASUREMENT_ID }}" >> .env
+          echo "VITE_CONFIG_NAVER_CLIENT_ID=${{ secrets.VITE_CONFIG_NAVER_CLIENT_ID }}" >> .env
+          echo "VITE_CONFIG_NAVER_CLIENT_SECRET=${{ secrets.VITE_CONFIG_NAVER_CLIENT_SECRET }}" >> .env
           cat .env
         working-directory: ${{ env.working-directory }}
       - name: Set up Node.js
