--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal-sheet": "^2.0.0",
     "react-naver-maps": "^0.1.2",
     "react-router-dom": "^6.9.0",
     "react-spring-bottom-sheet": "3.5.0-alpha.0",
